# stm32-touch-sense

./: Cargo.toml  LICENSE  README.md  fw.img  memory.x  openocd.cfg
.cargo/: config.toml
examples/: touch.rs
src/: config.rs  lib.rs  main.rs
