[package]
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "touch_sense"
version = "0.1.0"

[dependencies]
stm32f3xx-hal = "0.7.0"

[dev-dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"
stm32f3-discovery = "0.7.0"
volatile = "0.4.3"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
