[package]
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-touch-sense"
version = "0.1.0"

[features]
default = ["stm32f303xc"]
stm32f303xc = ["stm32f3xx", "stm32f3xx-hal/stm32f303xc"]
stm32f3xx = []
touch_debug = ["cortex-m-semihosting", "panic-semihosting"]

[dependencies.stm32f3xx-hal]
version = "0.7.0"
features = ["ld", "rt"]

[dev-dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
stm32f3-discovery = "0.7.0"

[dependencies.cortex-m-semihosting]
version = "0.3.7"
optional = true

[dependencies.panic-semihosting]
version = "0.5.6"
optional = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
